--- a/musicplayerweb/src/layouts/Components/Sidebar/Sidebar.module.scss
+++ b/musicplayerweb/src/layouts/Components/Sidebar/Sidebar.module.scss
@@ -11,10 +11,10 @@
         bottom: 60px;
     }
     .logo {
-        width: 120px;
-        height: 40px;
-        background: url('https://zmp3-static.zmdcdn.me/skins/zmp3-v6.1/images/backgrounds/logo-dark.svg')
-            50% / contain no-repeat;
+        width: 200px;
+        height: 100px;
+        background: url('../../../assets/images/SideBar/LogoLuxMusic.png')
+            100% / contain no-repeat;
     }
 
     .inner {
