--- a/musicplayerweb/src/GlobalStyle/GlobalStyles.scss
+++ b/musicplayerweb/src/GlobalStyle/GlobalStyles.scss
@@ -9,7 +9,7 @@
     // --sidebar-bg: #252525;
     --sidebar-bg: #1c1c1c;
     --sidebar-popup-bg: #2a213a;
-    --layout-header-bg: rgba(23, 15, 35, 0.666);
+    --layout-header-bg: #1c1c1c;
     --modal-layout-bg: rgba(0, 0, 0, 0.5);
     --player-bg: #000;
     --background-section: '';
@@ -19,13 +19,13 @@
     --text-primary: #fff;
     --text-blur: #756a87;
     --text-secondary: hsla(0, 0%, 100%, 0.5);
-    --link-text-hover: #c273ed;
+    --link-text-hover: #ff9233;
     --white: #fff;
     --black: #000;
     --button-hide: #595362;
     --search-text: #dadada;
 
-    --hover-blur-bg: rgba(0, 0, 0, 0.05);
+    --hover-blur-bg: rgba(0, 0, 0, 0.051);
     --hover-blur-bg-button: rgba(0, 0, 0, 0.2);
 
     --border-player: hsla(0, 0%, 100%, 0.1);
