--- a/musicplayerweb/src/GlobalStyle/GlobalStyles.scss
+++ b/musicplayerweb/src/GlobalStyle/GlobalStyles.scss
@@ -3,10 +3,8 @@
     --primary-blur: #333333;
     --primary: #090909;
     --primary-bg: #333333;
-    --purple-primary: #ff5f0f;
-    // --purple-primary: #01ffff;
+    --purple-primary: #ff500a;
     --primary-blur-bg: rgba(0, 0, 0, 0.05);
-    // --sidebar-bg: #252525;
     --sidebar-bg: #1c1c1c;
     --sidebar-popup-bg: #2a213a;
     --layout-header-bg: #1c1c1c;
@@ -46,12 +44,12 @@
 }
 
 //font family
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800');
-html {
+// @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@500&display=swap');html {
     font-size: 14px;
 }
 body {
-    font-family: 'Inter', sans-serif;
+    font-family: 'Nunito', sans-serif;
     color: var(--text-primary);
     overflow: overlay; 
 }
