--- a/musicplayerweb/src/Feature/PlayListSong.module.scss
+++ b/musicplayerweb/src/Feature/PlayListSong.module.scss
@@ -110,9 +110,12 @@
             width: 100%;
             display: inline-block;
             &:hover {
-                text-decoration: underline;
-                color: var(--link-text-hover);
+                a {
+                    text-decoration: underline;
+                    color: var(--purple-primary);
+                }
             }
+            
             a {
                 color: var(--text-secondary);
             }
