--- a/musicplayerweb/src/layouts/Components/Header/Header.module.scss
+++ b/musicplayerweb/src/layouts/Components/Header/Header.module.scss
@@ -60,9 +60,9 @@
         left: 50%;
         top: 50%;
         transform: translateX(-50%) translateY(-50%);
-        width: 120px;
-        height: 40px;
-        background: url('https://static-zmp3.zmdcdn.me/skins/zmp3-mobile-v5.2/images/logo-mp-3.svg')
+        width: 200px;
+        height: 100px;
+        background: url('../../../assets/images/SideBar/LogoLuxMusic.png')
             50% / contain no-repeat;
     }
 
