--- a/musicplayerweb/src/layouts/Components/Menu/Menu.module.scss
+++ b/musicplayerweb/src/layouts/Components/Menu/Menu.module.scss
@@ -64,17 +64,17 @@
     font-weight: 500;
 }
 
-.textblur {
-    .icon {
-        color: var(--text-blur);
-    }
-    .item_title {
-        font-size: 14px;
-        font-weight: 400;
-        color: var(--text-blur);
-    }
-    &:hover span {
-        color: var(--text-primary);
-        font-weight: 400;
-    }
-}
+// .textblur {
+//     .icon {
+//         color: var(--text-blur);
+//     }
+//     .item_title {
+//         font-size: 14px;
+//         font-weight: 400;
+//         color: var(--text-blur);
+//     }
+//     &:hover span {
+//         color: var(--text-primary);
+//         font-weight: 400;
+//     }
+// }
