--- a/musicplayerweb/src/GlobalStyle/GlobalStyles.scss
+++ b/musicplayerweb/src/GlobalStyle/GlobalStyles.scss
@@ -12,7 +12,8 @@
     --player-bg: #000;
     --background-section: '';
     --background-section-size: 1920px auto;
-    --newsonglayout-bg: url('https://zjs.zmdcdn.me/zmp3-desktop/releases/v1.9.9/static/media/new-release-bg.73d8f976.jpg');
+    // --newsonglayout-bg: url('https://zjs.zmdcdn.me/zmp3-desktop/releases/v1.9.9/static/media/new-release-bg.73d8f976.jpg');
+    --newsonglayout-bg: url('../assets/images/newsonglayout-bg.jpg');
 
     --text-primary: #fff;
     --text-blur: #756a87;
